azure/aks/deploy/manifest/postgres/sample2/service_pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-aks-csi-svc
  namespace: ${AKS_NAMESPACE}
  labels:
    app: ${AKS_APP_NAME}
spec:
  ports:
    - port: 5432
  type: LoadBalancer
  selector:
    app: ${AKS_APP_NAME}
